# docs/api.yaml
@@ -12,6 +12,32 @@ servers:
       port:
         default: '443'
 paths:
+  /v2/users/{user_id}:
+    put:
+      tags:
+        - Users
+      operationId: putUser
+      description: 'This API allows an administrator to create or modify a user account with a specific user_id.'
+      parameters:
+        - in: path
+          name: user_id
+          schema:
+            type: string
+          required: true
+          description: 'A fully-qualified user id. For example, @user:server.com.'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserRequest'
+      responses:
+        '200':
+          description: 'When a user was modified.'
+        '201':
+          description: 'When a new user object was created.'
+
+
   /v2/users:
     get:
       tags:
@@ -174,6 +200,7 @@ components:
           description: 'Fully qualified user: for example, @user:server.com.'
       required:
         - user_id
+
     User:
       type: object
       properties:
@@ -197,6 +224,67 @@ components:
           type: string
         creation_ts:
           type: integer
+
+    ThreePid:
+      type: object
+      required:
+        - medium
+        - address
+      properties:
+        medium:
+          type: string
+          enum:
+            - email
+            - msisdn
+        address:
+          type: string
+
+    ExternalId:
+      type: object
+      required:
+        - auth_provider
+        - external_id
+      properties:
+        auth_provider:
+          type: string
+        external_id:
+          type: string
+
+    UserRequest:
+      type: object
+      properties:
+        password:
+          description: "If provided, the user's password is updated and all devices are logged out, unless logout_devices is set to false."
+          type: string
+        logout_devices:
+          description: "If set to false, devices aren't logged out even when password is provided."
+          type: boolean
+        displayname:
+          description: "If set to an empty string (\"\"), the user's display name will be removed."
+          type: string
+        avatar_url:
+          description: "Must be a MXC URI. If set to an empty string (\"\"), the user's avatar is removed."
+          type: string
+        threepids:
+          description: "If provided, the user's third-party IDs (email, msisdn) are entirely replaced with the given list. Each item in the array is an object with the following fields:"
+          type: array
+          items:
+            $ref: '#/components/schemas/ThreePid'
+        external_ids:
+          description: "Allow setting the identifier of the external identity provider for SSO (Single sign-on). More details are in the configuration manual under the sections sso and oidc_providers."
+          type: array
+          items:
+            $ref: '#/components/schemas/ExternalId'
+        admin:
+          description: "Whether the user is a homeserver administrator, granting them access to the Admin API, among other things."
+          type: boolean
+        deactivated:
+          description: "If unspecified, deactivation state will be left unchanged."
+          type: boolean
+        user_type:
+          description: "If not provided, the user type will be not be changed. If null is given, the user type will be cleared. Other allowed options are: bot and support."
+          type: string
+          nullable: true
 
     UsersResponseObject:
       type: object
